@@ -109,7 +109,7 @@ def parse_configuration(config_filename, schema_filename, overrides=None, resolv
     except (ruamel.yaml.error.YAMLError, RecursionError) as error:
         raise Validation_error(config_filename, (str(error),))
 
-    override.apply_overrides(config, overrides)
+    override.apply_overrides(config, schema, overrides)
     logs = normalize.normalize(config_filename, config)
     if resolve_env:
         environment.resolve_env_variables(config)
