@@ -1,6 +1,8 @@
 1.8.5.dev0
  * #779: Add a "--match-archives" flag to the "check" action for selecting the archives to check,
    overriding the existing "archive_name_format" and "match_archives" options in configuration.
+ * #779: Only parse "--override" values as complex data types when they're for options of those
+   types.
 
 1.8.4
  * #715: Add a monitoring hook for sending backup status to a variety of monitoring services via the
